FIX: Shading behind logo

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -7,6 +7,15 @@
   object-fit: cover;
   object-position: center 10%;
 }
+.siteLogo::before {
+  position: absolute;
+  content:"";
+  height:100%;
+  width:100%;
+  top:0;
+  left:0;
+  background: radial-gradient( rgba(0, 0, 0, 0.74) 0%,rgba(0, 0, 0, 0) 80%);
+}
 .siteLogo {
   z-index: 1;
   margin-left: calc(50vw - 479px / 2);
